<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_color_back_email"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterEmailUserActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="#5E35B1"
            android:textSize="48sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/gradient_color_splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/logo_dash_lay"
                    android:gravity="center"
                    android:background="@drawable/gradient_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/logo_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/logo"
                        tools:ignore="ImageContrastCheck" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_text"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_edt_lay_1"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    app:boxStrokeColor="#FF6F00"
                    app:hintTextColor="@color/yellow"
                    android:layout_marginBottom="10dp"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconTint="@color/purple_500">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_lay_custom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/baseline_password_24"
                    app:startIconTint="@color/purple_500"
                    app:boxStrokeColor="#FF6F00"
                    android:textColorHint="#757575"
                    android:layout_marginBottom="10dp"
                    app:hintTextColor="@color/yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:maxLength="8"
                        android:hint="@string/enter_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:inputType="textPassword"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_lay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="@color/purple_500"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/purple_500"
                    app:boxStrokeColor="#FF6F00"
                    android:textColorHint="#757575"
                    app:hintTextColor="@color/yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edt_con"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:maxLength="8"
                        android:hint="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:inputType="textPassword"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background_user"
                    android:text="@string/add_guard_detail"
                    android:textColor="#5D4037"
                    android:textSize="22sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_mobile_activity_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:text="@string/please_select_email_or_continue_with_mobuile"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textColorLink="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_mobile_activity3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:linksClickable="true"
                android:text="@string/click_here"
                android:textAlignment="center"
                android:textColor="#01579B"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_mobile_activity4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_text_login"
                android:textAlignment="center"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/login_mobile_activity5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:linksClickable="true"
                android:text="@string/click_here"
                android:textAlignment="center"
                android:textColor="#01579B"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>